Add links in join.html

--- a/join.html
+++ b/join.html
@@ -49,7 +49,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="donate.html">Donate!</a></li>  
+            <li><a href="donate.html">Donate</a></li>
             <li><a href="join.html" id="selected">Join!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -67,8 +67,6 @@
       <div class="container">
           <h2>News</h2>
           <img class="img-responsive" src="img/logo.png">
-          
-        
       </div>
     </div>
 
@@ -76,23 +74,23 @@
       <div class="row">
         <div class="col-md-4">
           <h4>Step 1: Sign up for the organization</h4>
-          <p>Sign up on <a href="http://www.google.com">The Bridge</a> and on <a href="http://www.google.com">EWB-USA</a></p> 
+          <p>Sign up on <a href="https://thebridge.cmu.edu/organization/ewb">The Bridge</a> and on <a href="https://www.ewb-usa.org/donate/#join">EWB-USA</a></p>
         </div>
         <div class="col-md-4">
           <h4>Step 2: Dues</h4>
           <p> Dues are $20</p> 
-          <p>You can pay by cash at the <a href="http://www.google.com"> dues party</a>. You can also pay by credit card at <a href="http://www.google.com">CarnegieMellonTickets.com</a></p>
+          <p>You can pay by cash at the dues party on September 21 at 8:00pm in Wean 5403. You can also pay by credit card at <a href="https://carnegiemellontickets.universitytickets.com/w/default.aspx?cid=160">CarnegieMellonTickets.com</a></p>
         </div>
         <div class="col-md-4">
           <h4>Step 3: Stay in the Loop</h4>
-          <p>Sign up for the <a href="http://www.google.com"> general body mailing list</a> and <a href="http://www.google.com">like us on Facebook</a> to stay updated about upcoming events, important dates, and more.</p>
+          <p>Sign up for the <a href="https://goo.gl/LxzrKB"> general body mailing list</a> and <a href="https://www.facebook.com/Carnegie-Mellon-Engineers-Without-Borders-598801326925729/">like us on Facebook</a> to stay updated about upcoming events, important dates, and more.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <h4>Step 4: Sign up for a project!</h4>
           <p>Check out the project descriptions page for an overview of our various projects. 
-          <p>When you are ready, fill out this <a href="https://goo.gl/forms/UOaBWF7OFALj1LwS2">quick form</a> so that we can add you to the right mailing lists</p>
+          <p>When you are ready, fill out this <a href="https://goo.gl/LxzrKB">quick form</a> so that we can add you to the right mailing lists</p>
         </div>
         <div class="col-md-4">
           <h4>Step 5: Sign up for grilled cheese</h4>
