Have external links open in new tab

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <li><a href="donate.html">Donate!</a></li>  
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ewb-usa.org">EWB-USA</a></li>
+            <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
             </a></li>
           </ul>
         </div><!--/.nav-collapse -->
