--- a/donate.html
+++ b/donate.html
@@ -53,7 +53,7 @@
             <li><a href="donate.html" id="selected">Donate!</a></li>  
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ewb-usa.org">EWB-USA</a></li>
+            <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
             </a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -84,7 +84,7 @@
         <div class="col-md-6">
           <h4>Donate Through EWB-USA</h4>
           <p>Use your credit card to make a secure donation directly to our account with EWB-USA. </p>
-          <p><a class="btn-sm btn-default" href="https://ssl.charityweb.net/ewbusa/?Custom3=100181" role="button">Go &raquo;</a></p>
+          <p><a class="btn-sm btn-default" href="https://ssl.charityweb.net/ewbusa/?Custom3=100181" role="button" target="_blank">Go &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h4>Sponsor Our Organization</h4>
