--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li><a href="donate.html">Donate!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ewb-usa.org">EWB-USA</a></li>
+            <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
             </a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -75,7 +75,7 @@
         <div class="col-md-4">
           <h2>About Us</h2>
           <p> Welcome to the Carnegie Mellon University chapter of the non-profit humanitarian organization Engineers Without Borders. We are a group of students dedicated to understanding the challenges that face humanity today, and creating socially-conscious and environmentally sustainable technologies to improve quality of life for local, national, and international communities. </p>
-          <p><a class="btn btn-default" href="http://www.ewb-usa.org/" role="button">About EWB-USA &raquo;</a></p>
+          <p><a class="btn btn-default" href="http://www.ewb-usa.org/" role="button" target="_blank">About EWB-USA &raquo;</a></p>
           <p><a class="btn btn-default" href="about.html" role="button">About Our Chapter &raquo;</a></p>
        </div>
         <div class="col-md-4">
