--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
             <li><a href="donate.html">Donate!</a></li>  
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ewb-usa.org">EWB-USA</a></li>
+            <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
             </a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -83,12 +83,12 @@
           <div class="col-md-4">
         <h2>Newsletter Archive</h2>  
           <p>Check out our newsletters. </p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2016_Fall_Newsletter.pdf" role="button">Fall 2016</a></p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_05_Newsletter.pdf" role="button">May 2015</a></p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_03_Newsletter.pdf" role="button">March 2015</a></p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_01_Newsletter.pdf" role="button">January 2015</a></p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2014_Fall_Newsletter.pdf" role="button">Fall 2014</a></p>
-            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2013_Fall_Newsletter.pdf" role="button">Fall 2013</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2016_Fall_Newsletter.pdf" role="button" target="_blank">Fall 2016</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_05_Newsletter.pdf" role="button" target="_blank">May 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_03_Newsletter.pdf" role="button" target="_blank">March 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2015_01_Newsletter.pdf" role="button" target="_blank">January 2015</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2014_Fall_Newsletter.pdf" role="button" target="_blank">Fall 2014</a></p>
+            <p><a class="btn btn-default" href="newsletters/CMU_EWB_2013_Fall_Newsletter.pdf" role="button" target="_blank">Fall 2013</a></p>
        </div>
         
         </div>
