--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://www.ewb-usa.org">EWB-USA</a>
+                        <a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a>
                     </li>
                 </ul>
             </div><!--/.nav-collapse -->
