--- a/join.html
+++ b/join.html
@@ -53,7 +53,7 @@
             <li><a href="join.html" id="selected">Join!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://www.ewb-usa.org">EWB-USA</a></li>
+            <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
             </a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -74,26 +74,26 @@
       <div class="row">
         <div class="col-md-4">
           <h4>Step 1: Sign up for the organization</h4>
-          <p>Sign up on <a href="https://thebridge.cmu.edu/organization/ewb">The Bridge</a> and on <a href="https://www.ewb-usa.org/donate/#join">EWB-USA</a></p>
+          <p>Sign up on <a href="https://thebridge.cmu.edu/organization/ewb" target="_blank">The Bridge</a> and on <a href="https://www.ewb-usa.org/donate/#join">EWB-USA</a></p>
         </div>
         <div class="col-md-4">
           <h4>Step 2: Dues</h4>
           <p> Dues are $20</p> 
-          <p>You can pay by cash at the dues party on September 21 at 8:00pm in Wean 5403. You can also pay by credit card at <a href="https://carnegiemellontickets.universitytickets.com/w/default.aspx?cid=160">CarnegieMellonTickets.com</a></p>
+          <p>You can pay by cash at the dues party on September 21 at 8:00pm in Wean 5403. You can also pay by credit card at <a href="https://carnegiemellontickets.universitytickets.com/w/default.aspx?cid=160" target="_blank">CarnegieMellonTickets.com</a></p>
         </div>
         <div class="col-md-4">
           <h4>Step 3: Stay in the Loop</h4>
-          <p>Sign up for the <a href="https://goo.gl/LxzrKB"> general body mailing list</a> and <a href="https://www.facebook.com/Carnegie-Mellon-Engineers-Without-Borders-598801326925729/">like us on Facebook</a> to stay updated about upcoming events, important dates, and more.</p>
+          <p>Sign up for the <a href="https://goo.gl/LxzrKB" target="_blank"> general body mailing list</a> and <a href="https://www.facebook.com/Carnegie-Mellon-Engineers-Without-Borders-598801326925729/" target="_blank">like us on Facebook</a> to stay updated about upcoming events, important dates, and more.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <h4>Step 4: Sign up for a project!</h4>
           <p>Check out the project descriptions page for an overview of our various projects. 
-          <p>When you are ready, fill out this <a href="https://goo.gl/LxzrKB">quick form</a> so that we can add you to the right mailing lists</p>
+          <p>When you are ready, fill out this <a href="https://goo.gl/LxzrKB" target="_blank">quick form</a> so that we can add you to the right mailing lists</p>
         </div>
         <div class="col-md-4">
           <h4>Step 5: Sign up for grilled cheese</h4>
-          <p>Grilled cheese is EWB's weekly fundraiser. Please sign up for a slot to staff the table in the UC <a href="http://www.google.com">here</a></p>
+          <p>Grilled cheese is EWB's weekly fundraiser. Please sign up for a slot to staff the table in the UC <a href="http://www.google.com" target="_blank">here</a></p>
         </div>
     </div>
