Remove index.html and .html from url's

--- a/projects.html
+++ b/projects.html
@@ -38,24 +38,12 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact Us</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="projects.html" id="selected">Projects</a>
-                    </li>
-                    <li>
-                        <a href="news.html">News</a>
-                    </li>
-                    <li>
-                        <a href="donate.html">Donate!</a>
-                    </li>
+                    <li class="active"><a href="/" id="selected">Home</a></li>
+                    <li><a href="/contact">Contact Us</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/news">News</a></li>
+                    <li><a href="/donate">Donate!</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
