--- a/news.html
+++ b/news.html
@@ -44,12 +44,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="news.html" id="selected">News</a></li>
-            <li><a href="donate.html">Donate!</a></li>  
+            <li class="active"><a href="/" id="selected">Home</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/donate">Donate!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
