--- a/donate.html
+++ b/donate.html
@@ -45,12 +45,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/" id="selected">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="/contact">Contact Us</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/news">News</a></li>
-            <li><a href="/donate">Donate!</a></li>
+            <li><a href="/donate" id="selected">Donate</a></li>
+            <li><a href="/join">Join!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
