--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/news">News</a></li>
-            <li><a href="/donate">Donate!</a></li>
+            <li><a href="/donate">Donate</a></li>
+            <li><a href="/join">Join!</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a></li>
@@ -76,12 +77,12 @@
           <h2>About Us</h2>
           <p> Welcome to the Carnegie Mellon University chapter of the non-profit humanitarian organization Engineers Without Borders. We are a group of students dedicated to understanding the challenges that face humanity today, and creating socially-conscious and environmentally sustainable technologies to improve quality of life for local, national, and international communities. </p>
           <p><a class="btn btn-default" href="http://www.ewb-usa.org/" role="button" target="_blank">About EWB-USA &raquo;</a></p>
-          <p><a class="btn btn-default" href="about.html" role="button">About Our Chapter &raquo;</a></p>
+          <p><a class="btn btn-default" href="/about" role="button">About Our Chapter &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Join!</h2>
           
-          <p><a class="btn btn-default" href="projects.html" role="button">Learn About Our Projects &raquo;</a></p>
+          <p><a class="btn btn-default" href="/projects" role="button">Learn About Our Projects &raquo;</a></p>
             <p>Sign up for the Engineers Without Borders Email list</p>
           <form method="post" action="https://lists.andrew.cmu.edu/mailman/subscribe/EWB-members">
             <label for="email">Email:</label>
@@ -97,7 +98,7 @@
           <div class="col-md-4">
           <h2>Donate!</h2>
               <p>Engineers Without Borders' projects are in need of funding. Please consider donating to our organization. Feel free to contact us at <a href="mailto:cmuewb@gmail.com">cmuewb@gmail.com</a> if you have any questions.</p>
-              <p><a class="btn btn-default" href="donate.html" role="button">Donate!&raquo;</a></p>
+              <p><a class="btn btn-default" href="/donate" role="button">Donate!&raquo;</a></p>
           </div>
           
       </div>
