--- a/projects.html
+++ b/projects.html
@@ -38,12 +38,13 @@
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/" id="selected">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                     <li><a href="/about">About</a></li>
-                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/projects" id="selected">Projects</a></li>
                     <li><a href="/news">News</a></li>
-                    <li><a href="/donate">Donate!</a></li>
+                    <li><a href="/donate">Donate</a></li>
+                    <li><a href="/join">Join!</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
