--- a/contact.html
+++ b/contact.html
@@ -73,109 +73,113 @@
         <p>Send us an email at <a href="mailto:cmuewb@gmail.com">cmuewb@gmail.com</a></p>
         <h4>Executive Board</h4>
       <!-- Example row of columns -->
-      <table class="table">
-        <tr>
-            <th>Position</th>
-            <th>Name</th>
-            <th>Andrew ID</th>
-        </tr>
-        
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/CindyWeng.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>PRESIDENT</h5>
+                    <p>Cindy Weng<br/>cweng1</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/RoshanSajjad.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>EXECUTIVE VICE PRESIDENT</h5>
+                    <p>Roshan Sajjad<br/>rsajjad</p>
+                </div>
+            </div>
+        </div>
 
-        <tr>
-            <td>President</td>
-            <td>Cindy Weng</td>
-            <td>cweng1</td>
-        </tr>
-        <tr>
-            <td>Executive Vice President</td>
-            <td>Roshan Sajjad</td>
-            <td>rsajjad</td>
-        </tr>
-        <tr>
-            <td>Vice President of Finance</td>
-            <td>Sidharth Verma</td>
-            <td>sidhartv</td>
-        </tr>
-        <tr>
-            <td>Vice President of Projects</td>
-            <td>Ike Kilinc</td>
-            <td>aykilinc</td>
-        </tr>
-        <tr>
-            <td>Vice President of Public Relations</td>
-            <td>Tushita Gupta</td>
-            <td>tushitag</td>
-        </tr>
-        <tr>
-            <td>Fundraising Chair</td>
-            <td>Sherry Li</td>
-            <td>xiaoruil</td>
-        </tr>
-        <tr>
-            <td>Grants and Sponsorships Chair</td>
-            <td>Sidharth Verma</td>
-            <td>sidhartv</td>
-        </tr>
-        <tr>
-            <td>Secretary</td>
-            <td>Adithya Venkatesan</td>
-            <td>avenkat1</td>
-        </tr>
-        <tr>
-            <td>Webmaster</td>
-            <td>Sidharth Verma</td> 
-            <td>sidhartv</td>
-        </tr>
-      </table>
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/SidharthVerma.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>VP of FINANCE</h5>
+                    <p>Sidharth Verma<br/>sidhartv</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/IkeKilinc.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>VP of PROJECTS</h5>
+                    <p>Roshan Sajjad<br/>aykilinc</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/TushitaGupta.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>VP of PUBLIC RELATIONS</h5>
+                    <p>Tushita Gupta<br/>tushitag</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/SherryLi.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>FUNDRAISING CHAIR</h5>
+                    <p>Sherry Li<br/>xiaoruil</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/SidharthVerma.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>GRANTS and SPONSORSHIPS CHAIR</h5>
+                    <p>Sidharth Verma<br/>sidhartv</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/AdithyaVenkatesan.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>SECRETARY</h5>
+                    <p>Adithya Venkatesan<br/>avenkat1</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/SidharthVerma.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>WEBMASTER</h5>
+                    <p>Sidharth Verma<br/>sidhartv</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-sm-offset-1">
+                <div class="headshot">
+                    <img src="img/headshots/ChristinaOu.jpg"/>
+                </div>
+                <div class="member-description">
+                    <h5>WEBMASTER</h5>
+                    <p>Christina Ou<br/>cou</p>
+                </div>
+            </div>
+        </div>
+
+
      
-
-        <!--
-        <tr>
-            <td>President</td>
-            <td>Sara Johnson</td>
-            <td>snj</td>
-        </tr>
-        <tr>
-            <td> Executive Vice President</td>
-            <td>Julia Tucker</td>
-            <td>jltucker</td>
-        </tr>
-        <tr>
-            <td> Vice President of Finance</td>
-            <td>Roshan Sajjad</td>
-            <td>rsajjad</td>
-        </tr>
-        <tr>
-            <td> Vice President of Projects</td>
-            <td>Cindy Weng</td>
-            <td>cweng</td>
-        </tr>
-        <tr>
-            <td> Vice President of Public Relations</td>
-            <td>Tushita Gupta</td>
-            <td>tushitag</td>
-        </tr>
-        <tr>
-            <td> Fundraising Chair</td>
-            <td>Emily Carvalho</td>
-            <td>emcarval</td>
-        </tr>
-        <tr>
-            <td> Grants and Sponsorships Chair</td>
-            <td>Sidharth Verma</td>
-            <td>sidhartv</td>
-        </tr>
-        <tr>
-            <td> Secretary</td>
-            <td>Charlotte Deiss</td>
-            <td>cdeiss</td>
-        </tr>
-        <tr>
-            <td> Webmaster</td>
-            <td>Sidharth Verma</td> 
-            <td>sidhartv</td>
-      </table>
-     -->
       <p>To email an individual executive board member, send an email to [Andrew ID]@andrew.cmu.edu</p>
 
       <hr>
