Update Zimbabwe description

--- a/projects.html
+++ b/projects.html
@@ -66,9 +66,9 @@
             <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-6">
-                    <h2>Energy In Zimbabwe</h2>
-                    <p>Our chapter is currently working on a project to provide
-                    clean, reliable electricity to the community of Niyadire,
+                    <h2>Zimbabwe</h2>
+                    <p>Our chapter is currently working on a project to implement
+                    a sustainable, efficient cooking system to the community of Nyadire,
                     Zimbabwe.</p>
                     <p><a class="btn btn-default" href="#zimbabwe" role=
                     "button">View details &raquo;</a></p>
@@ -100,31 +100,11 @@
                 <div class="row" id="zimbabwe">
                     <h1>Zimbabwe</h1>
                     <div class="col-md-4"><img class="img-responsive" height=
-                    "400px" src="img/gala1.jpeg" width="600px"></div>
-                    <p>This project works to provide consistent energy to
-                    Niyadire, a Methodist Mission complex located three hours
-                    northeast of Harare, the capital city. The community is
-                    home to about 3,000 people and a hospital, orphanage, and a
-                    teacher's college. Their electricity is currently provided
-                    by the unreliable Zimbabwe Electrical Supply Author (ZESA).
-                    Community members experience multiple unscheduled energy
-                    blackouts each day and night, which presents a significant
-                    roadblock to the effective operation of the schools, the
-                    hospital, and homes.</p>
-                    <p>We are committed to working with Niyadire through 2020.
-                    Our first project is to build a street lighting system
-                    independent of the government electricity grid. The lights
-                    will allow community members to use the campus at night,
-                    which is currently unsafe.</p>
-                    <p>The team carried out alternatives analysis during the
-                    Fall 2015 semester to identify the most cost-effective and
-                    sustainable alternative energy source to power the street
-                    lights, considering decentralized and centralized solar,
-                    hydropower, biogas, and grid-charged batteries. Based on
-                    their research, the team is pursuing decentralized solar
-                    for their first project and are currently doing design
-                    work. We plan to travel to Zimbabwe in August 2017 to
-                    implement our design.</p>
+                    "400px" src="img/zimbabwe.jpg" width="700px"></div>
+                    <p>This team works to provide community improvements to
+                    Nyadire, a Methodist Mission complex located three hours
+                    northeast of Harare, the capital city. Nyadire is home to about 3,000 people and a hospital, orphanage, and a teacher's college. Over the past two years, EWB Zimbabwe designed a solar street light system to solve one of Nyadire's largest concerns: nighttime lighting. After researching alternatives such as solar, hydropower, biogas, and grid-charged batteries, the team decided to pursue decentralized solar. EWB was able to fundraise enough money to implement a 24 solar street light system to illuminate vital community routes. A travel team went to Zimbabwe in August 2017 to prepare the community for the September installation.</p>
+                    <p>During the August 2017 trip, the team also conducted an Assessment Trip to determine the scope of the next project with Nyadire. From issues regarding farming irrigation to water borehole quality to creating a sustainable food source for the orphanage, our team finally determined that the lack of a sustainable fuel source for cooking was the most imminent concern that could be tackled by our team. For this year, the team will be working on alternatives analysis and designing the implementation of the system.</p>
                 </div>
                 <div class="row" id="pet">
                     <h1>PET Thatch</h1>
