Add project leads headshots

--- a/contact.html
+++ b/contact.html
@@ -64,14 +64,14 @@
     <div class="jumbotron page-header">
       <h2>Contact Us</h2>
         <div class="container">
-          
-           <img class="img-responsive" src="img/thousandplus.jpeg">
+            <img class="img-responsive" src="img/thousandplus.jpeg">
       </div>
     </div>
 
     <div class="container">
         <p>Send us an email at <a href="mailto:cmuewb@gmail.com">cmuewb@gmail.com</a></p>
-        <h4>Executive Board</h4>
+        <h3 style="text-align: center">Executive Board</h3>
+        <br/>
       <!-- Example row of columns -->
         <div class="row">
             <div class="col-sm-4 col-sm-offset-1">
@@ -178,12 +178,88 @@
             </div>
         </div>
 
-
-     
       <p>To email an individual executive board member, send an email to [Andrew ID]@andrew.cmu.edu</p>
 
-      <hr>
 
+    <hr/>
+
+    <h3 style="text-align: center">Project Leads</h3>
+    <br/>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <h4 style="text-align: center">ZIMBABWE<br/>PROJECT<br/>LEADS</h4>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/CarolineMorin.jpg"/>
+                <p>Caroline Morin<br/>cmorin</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/ChristinaOu.jpg"/>
+                <p>Christina Ou<br/>cou</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/EvanSchindewolf.jpg"/>
+                <p>Evan Schindewolf<br/>eschinde</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <h4 style="text-align: center">AGRICULTURE<br/>PROJECT<br/>LEADS</h4>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/JackRonayne.jpg"/>
+                <p>Jack Ronayne<br/>jronayne</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/NinaPrakash.jpg"/>
+                <p>Nina Prakash<br/>nprakas1</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <h4 style="text-align: center">PET THATCH<br/>PROJECT<br/>LEAD</h4>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/NicoleMatis.jpg"/>
+                <p>Nicole Matis<br/>nmatis</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <h4 style="text-align: center">DRONES<br/>PROJECT<br/>LEADS</h4>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/NikoGupta.jpg"/>
+                <p>Niko Gupta<br/>nikolasg</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/RipLyster.jpg"/>
+                <p>Rip Lyster<br/>rlyster</p>
+            </div>
+        </div>
+    </div>
+    <p>To email an individual project lead, send an email to [Andrew ID]@andrew.cmu.edu</p>
+
+    <br/>
       <footer>
         <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FCarnegie-Mellon-Engineers-Without-Borders-598801326925729%2F&width=51&layout=box_count&action=like&size=small&show_faces=false&share=false&height=65&appId" width="51" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
       </footer>
