--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="member-description">
                     <h5>VP of PROJECTS</h5>
-                    <p>Roshan Sajjad<br/>aykilinc</p>
+                    <p>Ike Kilinc<br/>aykilinc</p>
                 </div>
             </div>
         </div>
