Reformat headshots and modify zimb description

--- a/contact.html
+++ b/contact.html
@@ -74,20 +74,20 @@
         <br/>
       <!-- Example row of columns -->
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/CindyWeng.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>PRESIDENT</h5>
                     <p>Cindy Weng<br/>cweng1</p>
                 </div>
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/RoshanSajjad.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>EXECUTIVE VICE PRESIDENT</h5>
                     <p>Roshan Sajjad<br/>rsajjad</p>
                 </div>
@@ -95,20 +95,20 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/SidharthVerma.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>VP of FINANCE</h5>
                     <p>Sidharth Verma<br/>sidhartv</p>
                 </div>
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/IkeKilinc.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>VP of PROJECTS</h5>
                     <p>Ike Kilinc<br/>aykilinc</p>
                 </div>
@@ -116,41 +116,20 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/TushitaGupta.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>VP of PUBLIC RELATIONS</h5>
                     <p>Tushita Gupta<br/>tushitag</p>
                 </div>
             </div>
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
-                    <img src="img/headshots/SherryLi.jpg"/>
-                </div>
-                <div class="member-description">
-                    <h5>FUNDRAISING CHAIR</h5>
-                    <p>Sherry Li<br/>xiaoruil</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
-                    <img src="img/headshots/SidharthVerma.jpg"/>
-                </div>
-                <div class="member-description">
-                    <h5>GRANTS and SPONSORSHIPS CHAIR</h5>
-                    <p>Sidharth Verma<br/>sidhartv</p>
-                </div>
-            </div>
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/AdithyaVenkatesan.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>SECRETARY</h5>
                     <p>Adithya Venkatesan<br/>avenkat1</p>
                 </div>
@@ -158,20 +137,11 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
-                    <img src="img/headshots/SidharthVerma.jpg"/>
-                </div>
-                <div class="member-description">
-                    <h5>WEBMASTER</h5>
-                    <p>Sidharth Verma<br/>sidhartv</p>
-                </div>
-            </div>
-            <div class="col-sm-4 col-sm-offset-1">
-                <div class="headshot">
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
                     <img src="img/headshots/ChristinaOu.jpg"/>
                 </div>
-                <div class="member-description">
+                <div class="col-sm-4 member-description">
                     <h5>WEBMASTER</h5>
                     <p>Christina Ou<br/>cou</p>
                 </div>
