Add drones project leads

--- a/contact.html
+++ b/contact.html
@@ -216,6 +216,20 @@
         </div>
         <div class="col-sm-3">
             <div class="project-lead">
+                <img src="img/headshots/TanmayaTripathi.png"/>
+                <p>Tanmaya Tripathi<br/>ttripath</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/VrishaliShah.jpg"/>
+                <p>Vrishali Shah<br/>vrishals</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 col-sm-offset-2">
+            <div class="project-lead">
                 <img src="img/headshots/NikoGupta.jpg"/>
                 <p>Niko Gupta<br/>nikolasg</p>
             </div>
