Add tushita's headshot

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
         <div class="row">
             <div class="col-sm-5 col-sm-offset-1">
                 <div class="col-sm-8 headshot">
-                    <img src="img/headshots/TushitaGupta.jpg"/>
+                    <img src="img/headshots/TushitaGupta.jpeg"/>
                 </div>
                 <div class="col-sm-4 member-description">
                     <h5>VP of PUBLIC RELATIONS</h5>
