Change join steps and drones name

--- a/join.html
+++ b/join.html
@@ -81,19 +81,19 @@
           <p>Sign up for the <a href="https://lists.andrew.cmu.edu/mailman/listinfo/ewb-members" target="_blank"> general body mailing list</a> and <a href="https://www.facebook.com/Carnegie-Mellon-Engineers-Without-Borders-598801326925729/" target="_blank">like us on Facebook</a> to stay updated about upcoming events, important dates, and more.</p>
         </div>
         <div class="col-md-4">
-          <h4>Step 3: Dues</h4>
-          <p> Dues are $20</p> 
-          <p>You can pay by cash at the dues party on September 21 at 8:00pm in Wean 5403. You can also pay by credit card at <a href="https://carnegiemellontickets.universitytickets.com/w/default.aspx?cid=160" target="_blank">CarnegieMellonTickets.com</a></p>
+          <h4>Step 3: Sign up for a project!</h4>
+          <p>Check out the project descriptions page for an overview of our various projects. 
+          <p>When you are ready, fill out this <a href="http://www.google.com" target="_blank">quick form</a> so that we can add you to the right mailing lists.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <h4>Step 4: Sign up for a project!</h4>
-          <p>Check out the project descriptions page for an overview of our various projects. 
-          <p>When you are ready, fill out this <a href="http://www.google.com" target="_blank">quick form</a> so that we can add you to the right mailing lists.</p>
+          <h4>Step 4: Sign up for grilled cheese</h4>
+          <p>Grilled cheese is EWB's weekly fundraiser. Please sign up for a slot to staff the table in the UC <a href="http://www.google.com" target="_blank">here.</a></p>
         </div>
         <div class="col-md-4">
-          <h4>Step 5: Sign up for grilled cheese</h4>
-          <p>Grilled cheese is EWB's weekly fundraiser. Please sign up for a slot to staff the table in the UC <a href="http://www.google.com" target="_blank">here.</a></p>
+          <h4>Step 5: Dues</h4>
+          <p> Dues are $20</p>
+          <p>You can pay by cash to an executive board member or project lead at any Engineers Without Borders meeting or event. You can also pay by credit card at <a href="https://carnegiemellontickets.universitytickets.com/w/default.aspx?cid=160" target="_blank">CarnegieMellonTickets.com</a></p>
         </div>
     </div>
