--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                     "button">View details &raquo;</a></p>
                 </div>
                 <div class="col-md-6">
-                    <h2>Drones</h2>
+                    <h2>AgriDrones</h2>
                     <p>This project aims to develop a system by which drones can assist farmers in collecting agricultural data and an accompanying data analysis platform.</p>
                     <p><a class="btn btn-default" href="#tingo" role=
                     "button">View details &raquo;</a></p>
