--- a/projects.html
+++ b/projects.html
@@ -185,7 +185,7 @@
                     created a test frame to build model roofs and prototyped
                     new methods of assembling plastic roof tiles.</p>
                 </div>
-                <div class="row" id="tingo">
+                <!-- <div class="row" id="tingo">
                     <h1>Tingo Pucara</h1>
                     <p>Since 2008, EWB-CMU, along with EWB members from the
                     University of Pittsburgh and the Pittsburgh Professional
@@ -205,7 +205,7 @@
                     new tri-chapter effort, hosted by the Pittsburgh
                     Professionals, for a similar water pumping project has
                     begun for the nearby community of Curingue.</p>
-                </div>
+                </div> -->
                 <hr>
                 <footer>
                     <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FCarnegie-Mellon-Engineers-Without-Borders-598801326925729%2F&width=51&layout=box_count&action=like&size=small&show_faces=false&share=false&height=65&appId" width="51" height="65" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
