--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta content="" name="description">
     <meta content="" name="author">
-    <link href="bootstrap/favicon.ico" rel="icon">
-       <title>Carnegie Mellon University Engineers Without Borders</title>
+    <link href="img/favicon.ico" rel="icon">
+    <title>CMU Engineers Without Borders</title>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 
-    <link href="jumbotron.css" rel="stylesheet">
+    <!-- <link href="jumbotron.css" rel="stylesheet"> -->
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -28,32 +28,34 @@
 <body>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button aria-controls="navbar" aria-expanded="false" class=
-                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-            </div>
-            <div class="navbar-collapse collapse" id="navbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/projects" id="selected">Projects</a></li>
-                    <li><a href="/news">News</a></li>
-                    <li><a href="/donate">Donate</a></li>
-                    <li><a href="/join">Join!</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a>
-                    </li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
+      <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-bar">
+              <span class="icon-bar"></span> 
+              <span class="icon-bar"></span> 
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">CMU Engineers Without Borders</a>
+          </div>
+          <div class="collapse navbar-collapse" id="navigation-bar">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/contact">Contact Us</a></li>
+              <li><a href="/about">About</a></li>
+              <li><a href="/projects" id="selected">Projects</a></li>
+              <li><a href="/news">News</a></li>
+              <li><a href="/donate">Donate</a></li>
+              <li><a href="/join">Join!</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                  <a href="http://www.ewb-usa.org" target="_blank">EWB-USA</a>
+              </li>
+            </ul>
+          </div>
+      </div>
     </nav>
+
     <div class="container">
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron page-header">
@@ -63,7 +65,6 @@
             </div>
         </div>
         <div class="container">
-            <!-- Example row of columns -->
             <div class="row">
                 <div class="col-md-6">
                     <h2>Zimbabwe</h2>
@@ -217,14 +218,14 @@
             <script src=
             "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
             </script> 
-            <script>
+            <!-- <script>
             window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')
-            </script> 
-            <script src="bootstrap/dist/js/bootstrap.min.js">
+            </script>  -->
+            <script src="bootstrap/bootstrap.min.js">
             </script> 
             <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
              
-            <script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js">
+            <!-- <script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"> -->
             </script>
         </div>
     </div>
