--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
               <span class="icon-bar"></span> 
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CMU Engineers Without Borders</a>
+            <a class="navbar-brand" href="#">CMU-EWB</a>
           </div>
           <div class="collapse navbar-collapse" id="navigation-bar">
             <ul class="nav navbar-nav">
