--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
               <span class="icon-bar"></span> 
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CMU-EWB</a>
+            <a class="navbar-brand" href="/">CMU-EWB</a>
           </div>
           <div class="collapse navbar-collapse" id="navigation-bar">
             <ul class="nav navbar-nav">
