--- a/donate.html
+++ b/donate.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span> 
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CMU-EWB</a>
+                <a class="navbar-brand" href="/">CMU-EWB</a>
             </div>
             <div class="collapse navbar-collapse" id="navigation-bar">
                 <ul class="nav navbar-nav">
@@ -85,8 +85,8 @@
       <div class="row">
         <div class="col-md-6">
           <h4>Donate Through EWB-USA</h4>
-          <p>Use your credit card to make a secure donation directly to our account with EWB-USA. </p>
-          <p><a class="btn-sm btn-default" href="https://ssl.charityweb.net/ewbusa/?Custom3=100181" role="button" target="_blank">Go &raquo;</a></p>
+          <p>Follow the link below to access Carnegie Mellon's donations page. To donate, click "View All Funds," select "Other," and specify "Engineers Without Borders" in the comments. You can then pay with your credit card and make a secure donation directly to our account with EWB-USA. </p>
+          <p><a class="btn-sm btn-default" href="https://securelb.imodules.com/s/1410/giving/16/form.aspx?sid=1410&gid=1&pgid=7023&cid=11195" role="button" target="_blank">Donate &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h4>Sponsor Our Organization</h4>
