Add noel low-qual photo

--- a/contact.html
+++ b/contact.html
@@ -201,7 +201,13 @@
 
     <div class="row">
         <div class="col-sm-2">
-            <h4 style="text-align: center">PET THATCH<br/>PROJECT<br/>LEAD</h4>
+            <h4 style="text-align: center">PET THATCH<br/>PROJECT<br/>LEADS</h4>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/NoelLau.png"/>
+                <p>Noel Lau<br/>noell</p>
+            </div>
         </div>
         <div class="col-sm-3">
             <div class="project-lead">
