--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
         </div>
         <div class="col-sm-3">
             <div class="project-lead">
-                <img src="img/headshots/NoelLau.png"/>
+                <img src="img/headshots/NoelLau.jpg"/>
                 <p>Noel Lau<br/>noell</p>
             </div>
         </div>
@@ -223,20 +223,6 @@
         </div>
         <div class="col-sm-3">
             <div class="project-lead">
-                <img src="img/headshots/TanmayaTripathi.png"/>
-                <p>Tanmaya Tripathi<br/>ttripath</p>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="project-lead">
-                <img src="img/headshots/VrishaliShah.jpg"/>
-                <p>Vrishali Shah<br/>vrishals</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3 col-sm-offset-2">
-            <div class="project-lead">
                 <img src="img/headshots/NikoGupta.jpg"/>
                 <p>Niko Gupta<br/>nikolasg</p>
             </div>
@@ -245,6 +231,20 @@
             <div class="project-lead">
                 <img src="img/headshots/RipLyster.jpg"/>
                 <p>Rip Lyster<br/>rlyster</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 col-sm-offset-2">
+            <div class="project-lead">
+                <img src="img/headshots/TanmayaTripathi.png"/>
+                <p>Tanmaya Tripathi<br/>ttripath</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/VrishaliShah.jpg"/>
+                <p>Vrishali Shah<br/>vrishals</p>
             </div>
         </div>
     </div>
