Add in new exec information

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <div class="jumbotron page-header">
       <h2>Contact Us</h2>
         <div class="container">
-            <img class="img-responsive" src="img/thousandplus.jpeg">
+            <img class="img-responsive" src="img/gala.jpg">
       </div>
     </div>
 
@@ -77,41 +77,20 @@
         <div class="row">
             <div class="col-sm-5 col-sm-offset-1">
                 <div class="col-sm-8 headshot">
-                    <img src="img/headshots/CindyWeng.jpg"/>
-                </div>
-                <div class="col-sm-4 member-description">
-                    <h5>PRESIDENT</h5>
-                    <p>Cindy Weng<br/>cweng1</p>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <div class="col-sm-8 headshot">
-                    <img src="img/headshots/RoshanSajjad.jpg"/>
-                </div>
-                <div class="col-sm-4 member-description">
-                    <h5>EXECUTIVE VICE PRESIDENT</h5>
-                    <p>Roshan Sajjad<br/>rsajjad</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-5 col-sm-offset-1">
-                <div class="col-sm-8 headshot">
-                    <img src="img/headshots/SidharthVerma.jpg"/>
-                </div>
-                <div class="col-sm-4 member-description">
-                    <h5>VP of FINANCE</h5>
-                    <p>Sidharth Verma<br/>sidhartv</p>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <div class="col-sm-8 headshot">
                     <img src="img/headshots/IkeKilinc.jpg"/>
                 </div>
                 <div class="col-sm-4 member-description">
-                    <h5>VP of PROJECTS</h5>
+                    <h5>President</h5>
                     <p>Ike Kilinc<br/>aykilinc</p>
+                </div>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
+                    <img src="img/headshots/AndresCano.png"/>
+                </div>
+                <div class="col-sm-4 member-description">
+                    <h5>VP of Finance</h5>
+                    <p>Andres Cano<br/>andresc</p>
                 </div>
             </div>
         </div>
@@ -119,31 +98,40 @@
         <div class="row">
             <div class="col-sm-5 col-sm-offset-1">
                 <div class="col-sm-8 headshot">
-                    <img src="img/headshots/TushitaGupta.jpeg"/>
+                    <img src="img/headshots/DincBasar.png"/>
                 </div>
                 <div class="col-sm-4 member-description">
-                    <h5>VP of PUBLIC RELATIONS</h5>
-                    <p>Tushita Gupta<br/>tushitag</p>
+                    <h5>VP of Public Relations</h5>
+                    <p>Dinc Basar<br/>dbasar</p>
                 </div>
             </div>
-            <div class="col-sm-5">
+            <div class="col-sm-5 col-sm-offset-1">
                 <div class="col-sm-8 headshot">
-                    <img src="img/headshots/AdithyaVenkatesan.jpg"/>
+                    <!-- <img src="img/headshots/IkeKilinc.jpg"/> -->
                 </div>
                 <div class="col-sm-4 member-description">
-                    <h5>SECRETARY</h5>
-                    <p>Adithya Venkatesan<br/>avenkat1</p>
+                    <h5>Fundraising and Events Chair</h5>
+                    <p>Warda Khan<br/>wardak</p>
                 </div>
             </div>
         </div>
 
         <div class="row">
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="col-sm-8 headshot">
+                    <!-- <img src="img/headshots/SidharthVerma.jpg"/> -->
+                </div>
+                <div class="col-sm-4 member-description">
+                    <h5>Membership Management Chair</h5>
+                    <p>Sarina Naphtali<br/>snaphtal</p>
+                </div>
+            </div>
             <div class="col-sm-5 col-sm-offset-1">
                 <div class="col-sm-8 headshot">
                     <img src="img/headshots/ChristinaOu.jpg"/>
                 </div>
                 <div class="col-sm-4 member-description">
-                    <h5>WEBMASTER</h5>
+                    <h5>Webmaster</h5>
                     <p>Christina Ou<br/>cou</p>
                 </div>
             </div>
@@ -163,12 +151,6 @@
         </div>
         <div class="col-sm-3">
             <div class="project-lead">
-                <img src="img/headshots/CarolineMorin.jpg"/>
-                <p>Caroline Morin<br/>cmorin</p>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="project-lead">
                 <img src="img/headshots/ChristinaOu.jpg"/>
                 <p>Christina Ou<br/>cou</p>
             </div>
@@ -177,6 +159,12 @@
             <div class="project-lead">
                 <img src="img/headshots/EvanSchindewolf.jpg"/>
                 <p>Evan Schindewolf<br/>eschinde</p>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="project-lead">
+                <img src="img/headshots/CathyFang.jpg"/>
+                <p>Cathy Fang<br/>mengyinf</p>
             </div>
         </div>
     </div>
@@ -234,20 +222,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-3 col-sm-offset-2">
-            <div class="project-lead">
-                <img src="img/headshots/TanmayaTripathi.png"/>
-                <p>Tanmaya Tripathi<br/>ttripath</p>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="project-lead">
-                <img src="img/headshots/VrishaliShah.jpg"/>
-                <p>Vrishali Shah<br/>vrishals</p>
-            </div>
-        </div>
-    </div>
+
     <p>To email an individual project lead, send an email to [Andrew ID]@andrew.cmu.edu</p>
 
     <br/>
