--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>CMU Engineers Without Borders</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Bootstrap core CSS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
@@ -48,7 +49,17 @@
                     <li class="active" id="selected"><a href="/">Home</a></li>
                     <li><a href="/contact">Contact Us</a></li>
                     <li><a href="/about">About</a></li>
-                    <li><a href="/projects">Projects</a></li>
+                    <li>
+                      <a href="/projects" id="dropdown-projects">Projects
+                        <i class="fa fa-caret-down"></i>
+                      </a>
+                      <div class="dropdown-content">
+                        <a href="#">AgriDrones</a>
+                        <a href="#">PET Thatch</a>
+                        <a href="#">Urban Agriculture</a>
+                        <a href="#">Zimbabwe</a>
+                      </div>
+                    </li>
                     <li><a href="/news">News</a></li>
                     <li><a href="/donate">Donate</a></li>
                     <li><a href="/join">Join!</a></li>
@@ -62,14 +73,62 @@
         </div>
     </nav>
 
-    <div class="container">
-
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron page-header">
+    <!-- <div class="jumbotron page-header">
       <div class="container">
           <img class="img-responsive" src="img/logo.png">
       </div>
+    </div> -->
+    <div class="container">
+      <h2>Carousel Example</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+
+          <div class="item active">
+            <img src="la.jpg" alt="Los Angeles" style="width:100%;">
+            <div class="carousel-caption">
+              <h3>Los Angeles</h3>
+              <p>LA is always so much fun!</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="chicago.jpg" alt="Chicago" style="width:100%;">
+            <div class="carousel-caption">
+              <h3>Chicago</h3>
+              <p>Thank you, Chicago!</p>
+            </div>
+          </div>
+        
+          <div class="item">
+            <img src="ny.jpg" alt="New York" style="width:100%;">
+            <div class="carousel-caption">
+              <h3>New York</h3>
+              <p>We love the Big Apple!</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
+
 
     <div class="container">
       <!-- Example row of columns -->
